# jw_api

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 001_initial_schema.sql
src/: config.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
src/middleware/: activity_log.rs  api_key.rs  auth.rs  mod.rs
src/models/: chat.rs  comment.rs  log.rs  mod.rs  post.rs  user.rs  vote.rs
src/routes/: analytics.rs  auth.rs  chat.rs  comment.rs  department.rs  dev.rs  health.rs  log.rs  mod.rs  post.rs  user.rs  vote.rs
src/services/: agent_service.rs  analytics_service.rs  auth_service.rs  chat_service.rs  comment_service.rs  department_service.rs  email_service.rs  gemini_service.rs  media_service.rs  mod.rs  post_service.rs  user_service.rs  vote_service.rs
tests/: test_auth_chat.rs  test_config_crypto.rs  test_database.rs  test_email.rs  test_errors_models.rs  test_gemini.rs  test_perf_auth.rs  test_perf_crypto.rs  test_perf_database.rs  test_perf_gemini.rs  test_perf_media.rs  test_perf_routes.rs  test_routes.rs  test_services.rs
tests/common/: mod.rs
