[package]
name = "jw_api"
version = "0.3.0-b"
edition = "2021"
description = "JogjaWaskita — Civic Engagement & Government Report Platform API"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = "0.9"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
oauth2 = "4"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "tokio1", "smtp-transport", "builder"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Encryption
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Env
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4.4"
axum-test = "16.4"
mockall = "0.13"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
serde_json = "1"
jsonwebtoken = "9"
base64 = "0.22"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
http-body-util = "0.1"
